tests/baselines/reference/autolift4.errors.txt
tests/cases/compiler/autolift4.ts(15,9): error TS2684: The 'this' context of type 'void' is not assignable to method's 'this' of type 'Point'.
tests/cases/compiler/autolift4.ts(19,70): error TS2339: Property 'm' does not exist on type 'Point3D'.


==== tests/cases/compiler/autolift4.ts (2 errors) ====
    class Point {
    
        constructor(public x: number, public y: number) {
    
        }
        getDist() { 
            return Math.sqrt(this.x*this.x + this.y*this.y); 
        }
        static origin = new Point(0,0);
    }
    
    class Point3D extends Point {
    
        constructor(x: number, y: number, public z: number, m:number) {
            super(x, y);
            ~~~~~~~~~~~
!!! error TS2684: The 'this' context of type 'void' is not assignable to method's 'this' of type 'Point'.
        }
        
        getDist() {
            return Math.sqrt(this.x*this.x + this.y*this.y + this.z*this.m);
                                                                         ~
!!! error TS2339: Property 'm' does not exist on type 'Point3D'.
        }        
    }
    
    